--- a/BookPoolV2/Views/Shared/_Layout_Out.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout_Out.cshtml
@@ -9,34 +9,29 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="@Url.Content("~/img/logo.png")">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Food Ninja</title>
-    <link type="text/css" href="/Content/css/shop/materialize.min.css" rel="stylesheet">
+    <title>BookPool</title>
+    <link type="text/css" href="@Url.Content("~/Content/css/shop/materialize.min.css")" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" href="/Content/css/shop/styles.css" rel="stylesheet">
-    <link type="text/css" href="/Content/css/quantity.css" rel="stylesheet">
+    <link type="text/css" href="@Url.Content("~/Content/css/shop/styles.css")" rel="stylesheet">
+    <link type="text/css" href="@Url.Content("~/Content/css/quantity.css")" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" />
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    @*<link rel="manifest" href="/manifest.json">*@
-    <!-- ios support -->
-    <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
-    <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
-    <meta name="theme-color" content="#FFE1C4">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script type="text/javascript" src="/Content/js/shop/materialize.min.js"></script>
-    <script src="/Content/js/shop/ui.js"></script>
-    <script src="/Content/js/shopui.js"></script>
-    <script src="/Content/js/quantity.js"></script>
-    <script src="https://kit.fontawesome.com/1afc59ddd6.js" crossorigin="anonymous"></script>
+    <link rel="manifest" href="@Url.Content("~/Content/manifest.json")">
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="@Url.Content("~/img/icons/icon-96x96.png")">
+    <meta name="apple-mobile-web-app-status-bar" content="#27ABE2">
+    <meta name="theme-color" content="#27ABE2">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+    @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css" />*@
+    <script src="https://kit.fontawesome.com/1afc59ddd6.js" crossorigin="anonymous"></script>
 
     <!--fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -45,8 +40,21 @@
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#FFE1C4" />
-    @*<link rel="manifest" href="/manifest.webmanifest" />*@
+    <meta name="theme-color" content="#27ABE2" />
+    <link rel="manifest" href="@Url.Content("~/Content/manifest.json")">
+    @*<script src="@Url.Content("~/Content/js/app.js")"></script>*@
+
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Content/js/shop/materialize.min.js")"></script>
+    <script src="@Url.Content("~/Content/js/shop/ui.js")"></script>
+    <script src="@Url.Content("~/Content/js/shopui.js")"></script>
+    <script src="@Url.Content("~/Content/js/quantity.js")"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.min.js"></script>
+    <script src="@Url.Content("~/Content/js/dynamics.min.js")"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
 
     <style>
         #side-form {
