--- a/BookPoolV2/Views/Home/MyBooks.cshtml
+++ b/BookPoolV2/Views/Home/MyBooks.cshtml
@@ -347,7 +347,7 @@
     #sellMyBookContainer input:checked + label {
         color: #555;
         border: 1px solid #ddd;
-        border-top: 2px solid orange;
+        border-top: 2px solid #F44336;
         border-bottom: 1px solid #fff;
     }
 
