--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -234,6 +234,11 @@
 <body class="white lighten-4">
 
     <div id="mainSearchBar" style="background:white;height:110px;">
+        <nav class="z-depth-0 titlenav" style="height:50px;background:white;">
+            <div class="nav-wrapper container" style="background:white; height:50px; padding-top:5px; width:100%; text-align:center;">
+                <img style="width:130px;" src="@Url.Content("~/img/bookpool-logo.png")" />
+            </div>
+        </nav>
         <nav id="locationMainHeader" class="z-depth-0 titlenav" style="height:50px;">
             <div class="nav-wrapper container">
                 @{
