--- a/BookPoolV2/Views/Shared/_Layout_Out.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout_Out.cshtml
@@ -99,6 +99,11 @@
 
 
     <nav id="locationMainHeader" class="z-depth-0 titlenav">
+        <nav class="z-depth-0 titlenav" style="height:50px;background:white;">
+            <div class="nav-wrapper container" style="background:white; height:50px; padding-top:5px; width:100%; text-align:center;">
+                <img style="width:130px;" src="@Url.Content("~/img/bookpool-logo.png")" />
+            </div>
+        </nav>
         <div class="nav-wrapper container">
             <div id="locationContainer">
                 <a class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;" data-target="side-form">
