--- a/BookPoolV2/Views/Shared/_AvailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_AvailableBook.cshtml
@@ -22,7 +22,16 @@
             <div style="width:100%;">
                 <div style="float:left;width: 100%;padding-right: 15px;">
                     <h5 class="card-title" style="margin-top:0;padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;font-weight:bold;">
-                        @Model.BookName
+                        @{
+                            if (Model.BookName.Count() > 30)
+                            {
+                                @Model.BookName.Substring(0, 30)<span>...</span>
+                            }
+                            else
+                            {
+                                @Model.BookName
+                            }
+                        }
                     </h5>
                     @{
                         if (Model.Authors != null)
