--- a/BookPoolV2/Views/Home/FilteredByCategory.cshtml
+++ b/BookPoolV2/Views/Home/FilteredByCategory.cshtml
@@ -15,11 +15,11 @@
     Category category = ViewBag.Category as Category;
 }
 
-<div id="goToHomeContainer" style="display:inline-flex;width:100%;">
-    <a href="/" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
+<div id="goToHomeContainer" style="display:inline-flex;width:100%;margin-top:50px;">
+    <a href="@Url.Action("Index","Home")" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
         <i class="material-icons">keyboard_arrow_left</i>
     </a>
-    <a href="/" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
+    <a href="@Url.Action("Index","Home")" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
         <span style="font-family:AvenirNextBold;">Home</span>
     </a>
 </div>
