--- a/BookPoolV2/Views/Shared/_UnavailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_UnavailableBook.cshtml
@@ -5,7 +5,7 @@
 
 <div class="card" style="box-shadow:none; -webkit-box-shadow:none; opacity:0.8;">
     <div class="card-horizontal" style="overflow: hidden;">
-        <div class="img-square-wrapper">
+        <div class="img-square-wrapper gotoproductnotavailable" data-BookName="@Model.BookName" data-BookGoogleID="@Model.GoogleID">
             @{
                 if (Model.ImageURL == null)
                 {
