--- a/BookPoolV2/Views/Academic/Index.cshtml
+++ b/BookPoolV2/Views/Academic/Index.cshtml
@@ -126,7 +126,7 @@
 </style>
 
 <div class="row">
-    <div class="col s12 m12 l12" style="margin-bottom:30px;">
+    <div class="col s12 m12 l12" style="margin-bottom:30px;margin-top:50px;">
         <h5>
             <i class="material-icons left red-text">search</i>
             Search by Academical Institutions
@@ -176,6 +176,29 @@
                     @Html.Partial("_AvailableBook", book)
                 </div>
             }
+        }
+        if (books.Count() == 0)
+        {
+            <div class="col s12 m12 l12" style="text-align:center;">
+                <img src="@Url.Content("~/img/books_not_found.jpg")" />
+                <h4>
+                    We didn't find a book that matches your search result.
+                </h4>
+                @{
+                    if (Request.IsAuthenticated)
+                    {
+                        <h5>
+                            Do you have university/shool books you wish to sell? Just <a href="@Url.Action("MyBooks","Home")">click here</a> and sell them.
+                        </h5>
+                    }
+                    else
+                    {
+                        <h5>
+                            Do you have university/shool books you wish to sell? Just <a style="cursor:pointer;" class="modal-trigger" data-target="sell-my-book-modal">click here</a> and sell them.
+                        </h5>
+                    }
+                }
+            </div>
         }
     }
 
