--- a/BookPoolV2/Views/Shared/_Layout_Out.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout_Out.cshtml
@@ -114,10 +114,10 @@
                 </a>
             </div>
             <div id="goToHomeContainer" style="display:none;">
-                <a href="/" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
+                <a href="@Url.Action("Index","Home")" class="sidenav-trigger" style="display:inherit; width:30px; color:var(--primaryRed); cursor:pointer;">
                     <i class="material-icons">keyboard_arrow_left</i>
                 </a>
-                <a href="/" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
+                <a href="@Url.Action("Index","Home")" class="sidenav-trigger" style="display:inherit; margin-left:0px; cursor:pointer;">
                     <span style="font-family:AvenirNextBold;">Home</span>
                 </a>
             </div>
